// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`пустой листинг должен отрендерить блоки в правильном порядке в листинге новых 1`] = `
<div
  className="PageListing"
  id="listing-filters"
>
  <SubscriptionMessage
    replaceLink={[MockFunction]}
  />
  <ListingCarsPresetClear
    className="PageListing__carsPresetClear"
    searchParameters={
      Object {
        "category": "cars",
      }
    }
  />
  <Connect(ListingHead)
    searchParams={
      Object {
        "category": "cars",
      }
    }
  />
  <Connect(ListingSearchSave)
    offersCount={0}
  />
  <Connect(ListingSeoTagCarousel)
    onClick={[Function]}
  />
  <Connect(ListingInfiniteDesktop)
    fetchPhones={[MockFunction]}
    key="ListingInfiniteDesktop"
    listingRequestId="abc123"
    outputType="list"
    pageParams={
      Object {
        "category": "cars",
        "section": "new",
      }
    }
    searchParameters={
      Object {
        "category": "cars",
        "section": "new",
      }
    }
    sendMarketingEventByListingOffer={[MockFunction]}
  />
  <ListingResetFiltersSuggest
    offersCount={0}
    params={
      Object {
        "category": "cars",
        "section": "new",
      }
    }
  />
  <ListingEmptyOffers
    itemComponent={[Function]}
  />
  <Connect(ListingPromoSubscriptionCore)
    isEmptyListing={true}
  />
  <ListingCarouselNewestUsed
    className="PageListing__carousel"
  />
  <Connect(ListingCarouselRelated)
    className="PageListing__carousel PageListing__carousel_indent_bottom"
  />
  <Connect(Ad)
    place="c3"
  />
  <Connect(ListingDealersList)
    className="PageListing__carousel PageListing__carousel_indent_top"
  />
  <Connect(PaymentModal) />
  <Connect(Notification) />
  <Connect(CrossLinks)
    currentPage="LISTING_NEW"
    params={
      Object {
        "category": "cars",
        "section": "new",
      }
    }
  />
</div>
`;

exports[`пустой листинг должен отрендерить блоки в правильном порядке в смешанном листинге 1`] = `
<div
  className="PageListing"
  id="listing-filters"
>
  <SubscriptionMessage
    replaceLink={[MockFunction]}
  />
  <ListingCarsPresetClear
    className="PageListing__carsPresetClear"
    searchParameters={
      Object {
        "category": "cars",
      }
    }
  />
  <Connect(ListingHead)
    searchParams={
      Object {
        "category": "cars",
      }
    }
  />
  <Connect(ListingSearchSave)
    offersCount={0}
  />
  <Connect(ListingPopularMMM)
    className="PageListing__popularMMM"
    count={12}
    isScrollToTopEnabled={true}
    onClick={[Function]}
  />
  <Connect(ListingSeoTagCarousel)
    onClick={[Function]}
  />
  <Element
    name="listing-ad-c1"
  >
    <Connect(Ad)
      direct={
        Object {
          "view": "desktop-listing-c1",
        }
      }
      place="c1"
    />
  </Element>
  <Connect(ListingGeoRadiusCounters)
    className="PageListing__geoRadiusCounters"
    onItemClick={[Function]}
  />
  <ListingFilterPanel
    category="cars"
    onFilterChange={[Function]}
    section="all"
    sorts={
      Array [
        Object {
          "default": true,
          "text": "По актуальности",
          "val": "fresh_relevance_1-desc",
        },
        Object {
          "text": "По дате размещения",
          "val": "cr_date-desc",
        },
        Object {
          "text": "По возрастанию цены",
          "val": "price-asc",
        },
        Object {
          "text": "По убыванию цены",
          "val": "price-desc",
        },
        Object {
          "text": "По году: новее",
          "val": "year-desc",
        },
        Object {
          "text": "По году: старше",
          "val": "year-asc",
        },
        Object {
          "text": "По пробегу",
          "val": "km_age-asc",
        },
        Object {
          "text": "По названию",
          "val": "alphabet-asc",
        },
        Object {
          "category": "cars",
          "text": "По уникальности",
          "val": "autoru_exclusive-desc",
        },
        Object {
          "category": "cars",
          "text": "По оценке стоимости",
          "val": "price_profitability-desc",
        },
        Object {
          "category": "cars",
          "text": "Сначала от собственников",
          "val": "proven_owner-desc",
        },
      ]
    }
    withDiscount={true}
  />
  <ListingCars
    category="cars"
    currency="RUR"
    fetchPhones={[MockFunction]}
    filteredOffersCount={0}
    hiddenOffers={Array []}
    listing={Array []}
    listingRequestId="abc123"
    matchApplicationAllowedMarksModels={Object {}}
    onChangeSearchParams={[Function]}
    outputType="list"
    pagination={
      Object {
        "total_offers_count": 0,
        "total_page_count": 0,
      }
    }
    params={
      Object {
        "category": "cars",
        "section": "all",
      }
    }
    searchParams={
      Object {
        "category": "cars",
      }
    }
    section="all"
    sendMarketingEventByListingOffer={[MockFunction]}
  />
  <ListingCarsPagination
    linkBuilder={[Function]}
    onClick={[Function]}
    onMoreClick={[Function]}
    pagination={
      Object {
        "total_offers_count": 0,
        "total_page_count": 0,
      }
    }
  />
  <Connect(ListingInfiniteDesktop)
    fetchPhones={[MockFunction]}
    key="ListingInfiniteDesktop"
    listingRequestId="abc123"
    outputType="list"
    pageParams={
      Object {
        "category": "cars",
        "section": "all",
      }
    }
    searchParameters={
      Object {
        "category": "cars",
        "section": "all",
      }
    }
    sendMarketingEventByListingOffer={[MockFunction]}
  />
  <ListingResetFiltersSuggest
    offersCount={0}
    params={
      Object {
        "category": "cars",
        "section": "all",
      }
    }
  />
  <ListingEmptyOffers
    itemComponent={[Function]}
  />
  <Connect(ListingPromoSubscriptionCore)
    isEmptyListing={true}
  />
  <Connect(ListingCarouselRelated)
    className="PageListing__carousel PageListing__carousel_indent_bottom"
  />
  <Connect(Ad)
    place="c3"
  />
  <Connect(ListingDealersList)
    className="PageListing__carousel PageListing__carousel_indent_top"
  />
  <Connect(PaymentModal) />
  <Connect(Notification) />
  <Connect(CrossLinks)
    params={
      Object {
        "category": "cars",
        "section": "all",
      }
    }
  />
</div>
`;
